refit data loader validations

--- a/01_getting_started.ipynb
+++ b/01_getting_started.ipynb
@@ -25,7 +25,7 @@
       "\n",
       "Loading specified buildings: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 15, 16, 17, 18, 19, 20, 21]\n",
       "Parsing the readme file specified: data/refit/REFIT_Readme.txt\n",
-      "Wall time: 1.04 s\n"
+      "Wall time: 1.07 s\n"
      ]
     }
    ],
@@ -44,21 +44,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "14676015-31c3-48a5-891c-4fa4af9be7f8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading data for house = 2\n",
-      "Loading data for house = 3\n",
-      "House number = 14 does not exist.\n",
-      "Wall time: 16.3 s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time\n",
     "house2 = refit.get_house_data(2)\n",
@@ -68,185 +57,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "daa77d0b-2d92-4c61-afa1-9f80538fd0b4",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "pandas.core.frame.DataFrame"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(house2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "79e3d12e-5a64-477f-bdd0-e700879dda64",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>unix</th>\n",
-       "      <th>aggregate</th>\n",
-       "      <th>fridge-freezer</th>\n",
-       "      <th>washingmachine</th>\n",
-       "      <th>dishwasher</th>\n",
-       "      <th>television</th>\n",
-       "      <th>microwave</th>\n",
-       "      <th>toaster</th>\n",
-       "      <th>hi-fi</th>\n",
-       "      <th>kettle</th>\n",
-       "      <th>ovenextractorfan</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>time</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2013-09-17 22:08:11</th>\n",
-       "      <td>1379455691</td>\n",
-       "      <td>695</td>\n",
-       "      <td>88</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-09-17 22:08:18</th>\n",
-       "      <td>1379455698</td>\n",
-       "      <td>694</td>\n",
-       "      <td>88</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-09-17 22:08:26</th>\n",
-       "      <td>1379455706</td>\n",
-       "      <td>694</td>\n",
-       "      <td>88</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-09-17 22:08:34</th>\n",
-       "      <td>1379455714</td>\n",
-       "      <td>702</td>\n",
-       "      <td>88</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-09-17 22:08:42</th>\n",
-       "      <td>1379455722</td>\n",
-       "      <td>700</td>\n",
-       "      <td>88</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                           unix  aggregate  fridge-freezer  washingmachine  \\\n",
-       "time                                                                         \n",
-       "2013-09-17 22:08:11  1379455691        695              88               0   \n",
-       "2013-09-17 22:08:18  1379455698        694              88               0   \n",
-       "2013-09-17 22:08:26  1379455706        694              88               0   \n",
-       "2013-09-17 22:08:34  1379455714        702              88               0   \n",
-       "2013-09-17 22:08:42  1379455722        700              88               0   \n",
-       "\n",
-       "                     dishwasher  television  microwave  toaster  hi-fi  \\\n",
-       "time                                                                     \n",
-       "2013-09-17 22:08:11           0           0          0        0      0   \n",
-       "2013-09-17 22:08:18           0           0          0        0      0   \n",
-       "2013-09-17 22:08:26           0           0          0        0      0   \n",
-       "2013-09-17 22:08:34           0           0          0        0      0   \n",
-       "2013-09-17 22:08:42           0           0          0        0      0   \n",
-       "\n",
-       "                     kettle  ovenextractorfan  \n",
-       "time                                           \n",
-       "2013-09-17 22:08:11       0                 0  \n",
-       "2013-09-17 22:08:18       0                 0  \n",
-       "2013-09-17 22:08:26       0                 0  \n",
-       "2013-09-17 22:08:34       0                 0  \n",
-       "2013-09-17 22:08:42       0                 0  "
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "house2.head()"
    ]
@@ -261,40 +75,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "dcd62c84-332e-4f00-a86c-430577f680a3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fetching appliances for house = 2\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['unix',\n",
-       " 'aggregate',\n",
-       " 'fridge-freezer',\n",
-       " 'washingmachine',\n",
-       " 'dishwasher',\n",
-       " 'television',\n",
-       " 'microwave',\n",
-       " 'toaster',\n",
-       " 'hi-fi',\n",
-       " 'kettle',\n",
-       " 'ovenextractorfan']"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "refit.get_appliance_names(house_number=2)"
+    "refit.get_appliance_names(house=7)"
    ]
   },
   {
@@ -307,36 +93,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "61c7cfdb-db72-47fb-b992-d4ad77af8a05",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading data for appliance KETTLE\n",
-      "\n",
-      "House number = 1 does not have kettle\n",
-      "Fetching KETTLE data for House 2\n",
-      "Fetching KETTLE data for House 3\n",
-      "Wall time: 14.5 s\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "kettle = refit.get_appliance_data('Kettle', houses=[1,2,3])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "bfb771ba-4694-4bce-bf0f-47862c1f61c2",
+   "id": "61c7cfdb-db72-47fb-b992-d4ad77af8a05",
    "metadata": {},
    "outputs": [],
    "source": [
-    "type(kettle)"
+    "%%time\n",
+    "# kettle = refit.get_appliance_data('Kettle')"
    ]
   },
   {
@@ -346,7 +109,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kettle.resample()"
+    "# kettle.data[2]"
    ]
   },
   {
@@ -359,13 +122,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "245b4628-ffb2-476e-9f24-8666859a7c0d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading data for appliance KETTLE ...\n",
+      "Appliance 'kettle' does not exist in house 1. Check the availability of the appliance by using 'get_appliance_names' method\n",
+      "Fetching KETTLE data for House 2\n",
+      "House number = 14 does not exist in the provided dataset.\n",
+      "Fetching KETTLE data for House 15\n",
+      "Wall time: 13.9 s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
-    "kettle = refit.get_appliance_data('Kettle', houses=[1,2,14,15])"
+    "kettle = refit.get_appliance_data('Kettle', house=[1,2,14,15])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "1bc5d7cb-70da-4146-bc96-a89ff29193a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{2:                      aggregate  kettle\n",
+       " time                                  \n",
+       " 2013-09-17 22:08:11        695       0\n",
+       " 2013-09-17 22:08:18        694       0\n",
+       " 2013-09-17 22:08:26        694       0\n",
+       " 2013-09-17 22:08:34        702       0\n",
+       " 2013-09-17 22:08:42        700       0\n",
+       " ...                        ...     ...\n",
+       " 2015-05-28 08:05:16        315       0\n",
+       " 2015-05-28 08:05:23        333       0\n",
+       " 2015-05-28 08:05:30        313       0\n",
+       " 2015-05-28 08:05:37        316       0\n",
+       " 2015-05-28 08:05:43        383       0\n",
+       " \n",
+       " [5733526 rows x 2 columns],\n",
+       " 15:                      aggregate  kettle\n",
+       " time                                  \n",
+       " 2013-12-17 17:24:18        243       0\n",
+       " 2013-12-17 17:24:33        244       0\n",
+       " 2013-12-17 17:24:48        245       0\n",
+       " 2013-12-17 17:25:03        249       0\n",
+       " 2013-12-17 17:25:18        241       0\n",
+       " ...                        ...     ...\n",
+       " 2015-07-08 02:10:27        164       0\n",
+       " 2015-07-08 02:10:34        163       0\n",
+       " 2015-07-08 02:10:41        166       0\n",
+       " 2015-07-08 02:10:48        165       0\n",
+       " 2015-07-08 02:10:54        165       0\n",
+       " \n",
+       " [6225696 rows x 2 columns]}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kettle.data"
    ]
   },
   {
@@ -382,6 +208,17 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "811396c8-af5a-4f6a-b647-33730861a5f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "kettle.resample()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0193893f-9216-4fbb-a43d-85d40d73a097",
    "metadata": {},
    "outputs": [],
    "source": []
