getting started finalized

--- a/02_sampling.ipynb
+++ b/02_sampling.ipynb
@@ -22,20 +22,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "550b17b5-0917-4885-95e8-b2491f971955",
+   "id": "7f946083-a19a-4309-a547-7970d81b8c47",
    "metadata": {},
    "source": [
-    "## Fetch available appliances for a selected house"
+    "# Load data for selected appliance and selected houses"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e85564f-2c8a-4f13-b968-aeb7c0323be4",
+   "id": "aaf3f3fd-9fd3-4184-9845-aa27381e81af",
    "metadata": {},
    "outputs": [],
    "source": [
-    "refit.get_appliance_names(house_number=3)"
+    "%%time\n",
+    "kettle = refit.get_appliance_data(appliance=\"Kettle\", houses=[1,2,3])"
    ]
   },
   {
