--- a/01_getting_started.ipynb
+++ b/01_getting_started.ipynb
@@ -21,12 +21,24 @@
      "output_type": "stream",
      "text": [
       "Followings are the general configuration of your experiment..\n",
-      "{'DATA_FOLDER': 'data/refit/', 'DATA_TYPE': '.csv', 'README_FILE': 'data/refit/REFIT_Readme.txt', 'REFIT_HOUSES': [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 15, 16, 17, 18, 19, 20, 21]}\n",
+      "{'DATA_FOLDER': 'refit_analyzer/data/refit/', 'DATA_TYPE': '.csv', 'README_FILE': 'refit_analyzer/data/refit/REFIT_Readme.txt', 'REFIT_HOUSES': [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 15, 16, 17, 18, 19, 20, 21]}\n",
       "\n",
       "Loading specified buildings: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 15, 16, 17, 18, 19, 20, 21]\n",
-      "Parsing the readme file specified: data/refit/REFIT_Readme.txt\n",
-      "CPU times: total: 641 ms\n",
-      "Wall time: 628 ms\n"
+      "Error occured in _load_file_via_dask method of CSV_Loader class due to  [WinError 3] The system cannot find the path specified: 'D:/Repos/1.11/refit_analyzer/refit_analyzer/data/refit/House_1.csv'\n",
+      "Parsing the readme file specified: refit_analyzer/data/refit/REFIT_Readme.txt\n",
+      "Error occured in parser method due to  [Errno 2] No such file or directory: 'refit_analyzer/data/refit/REFIT_Readme.txt'\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'NoneType' object is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "File \u001b[1;32m<timed exec>:1\u001b[0m\n",
+      "File \u001b[1;32mD:\\Repos\\1.11\\refit_analyzer\\refit_loader\\data_loader.py:92\u001b[0m, in \u001b[0;36mREFIT_Loader.__init__\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     88\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcollective_dataset \u001b[38;5;241m=\u001b[39m CSV_Loader\u001b[38;5;241m.\u001b[39m_load_files_via_dask(_data_folder\u001b[38;5;241m=\u001b[39mconfig[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDATA_FOLDER\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mHouse_\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m     89\u001b[0m                                                     _files_format\u001b[38;5;241m=\u001b[39mconfig[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDATA_TYPE\u001b[39m\u001b[38;5;124m'\u001b[39m],\n\u001b[0;32m     90\u001b[0m                                                     _buildings\u001b[38;5;241m=\u001b[39mconfig[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mREFIT_HOUSES\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[0;32m     91\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mkeys_of_appliances \u001b[38;5;241m=\u001b[39m refit_parser(config[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mREADME_FILE\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[1;32m---> 92\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m house_number \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcollective_dataset:\n\u001b[0;32m     93\u001b[0m     cols \u001b[38;5;241m=\u001b[39m [header\u001b[38;5;241m.\u001b[39mlower() \u001b[38;5;28;01mfor\u001b[39;00m header \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mkeys_of_appliances[\u001b[38;5;28mstr\u001b[39m(house_number)]]\n\u001b[0;32m     94\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcollective_dataset[house_number] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcollective_dataset[house_number]\u001b[38;5;241m.\u001b[39mrename(columns\u001b[38;5;241m=\u001b[39m{\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTime\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtime\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUnix\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124munix\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAggregate\u001b[39m\u001b[38;5;124m\"\u001b[39m: cols[\u001b[38;5;241m0\u001b[39m], \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAppliance1\u001b[39m\u001b[38;5;124m\"\u001b[39m:cols[\u001b[38;5;241m1\u001b[39m], \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAppliance2\u001b[39m\u001b[38;5;124m\"\u001b[39m:cols[\u001b[38;5;241m2\u001b[39m],\n\u001b[0;32m     95\u001b[0m                                                                                           \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAppliance3\u001b[39m\u001b[38;5;124m\"\u001b[39m:cols[\u001b[38;5;241m3\u001b[39m], \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAppliance4\u001b[39m\u001b[38;5;124m\"\u001b[39m:cols[\u001b[38;5;241m4\u001b[39m], \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAppliance5\u001b[39m\u001b[38;5;124m\"\u001b[39m:cols[\u001b[38;5;241m5\u001b[39m],\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAppliance6\u001b[39m\u001b[38;5;124m\"\u001b[39m:cols[\u001b[38;5;241m6\u001b[39m], \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAppliance7\u001b[39m\u001b[38;5;124m\"\u001b[39m:cols[\u001b[38;5;241m7\u001b[39m],\n\u001b[0;32m     96\u001b[0m                                                                                           \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAppliance8\u001b[39m\u001b[38;5;124m\"\u001b[39m:cols[\u001b[38;5;241m8\u001b[39m], \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAppliance9\u001b[39m\u001b[38;5;124m\"\u001b[39m:cols[\u001b[38;5;241m9\u001b[39m]})\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'NoneType' object is not iterable"
      ]
     }
    ],
@@ -45,38 +57,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "dcd62c84-332e-4f00-a86c-430577f680a3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fetching appliances for house = 2\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['unix',\n",
-       " 'aggregate',\n",
-       " 'fridge-freezer',\n",
-       " 'washingmachine',\n",
-       " 'dishwasher',\n",
-       " 'television',\n",
-       " 'microwave',\n",
-       " 'toaster',\n",
-       " 'hi-fi',\n",
-       " 'kettle',\n",
-       " 'ovenextractorfan']"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "refit.get_appliance_names(house=2)"
    ]
@@ -91,22 +75,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "14676015-31c3-48a5-891c-4fa4af9be7f8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading data for house = 2\n",
-      "Loading data for house = 3\n",
-      "House Number = 14 does not exist in the provided dataset.\n",
-      "CPU times: total: 41.7 s\n",
-      "Wall time: 26.9 s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time\n",
     "house2 = refit.get_house_data(house=2)\n",
@@ -116,164 +88,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "79e3d12e-5a64-477f-bdd0-e700879dda64",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>unix</th>\n",
-       "      <th>aggregate</th>\n",
-       "      <th>fridge-freezer</th>\n",
-       "      <th>washingmachine</th>\n",
-       "      <th>dishwasher</th>\n",
-       "      <th>television</th>\n",
-       "      <th>microwave</th>\n",
-       "      <th>toaster</th>\n",
-       "      <th>hi-fi</th>\n",
-       "      <th>kettle</th>\n",
-       "      <th>ovenextractorfan</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>time</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2013-09-17 22:08:11</th>\n",
-       "      <td>1379455691</td>\n",
-       "      <td>695</td>\n",
-       "      <td>88</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-09-17 22:08:18</th>\n",
-       "      <td>1379455698</td>\n",
-       "      <td>694</td>\n",
-       "      <td>88</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-09-17 22:08:26</th>\n",
-       "      <td>1379455706</td>\n",
-       "      <td>694</td>\n",
-       "      <td>88</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-09-17 22:08:34</th>\n",
-       "      <td>1379455714</td>\n",
-       "      <td>702</td>\n",
-       "      <td>88</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-09-17 22:08:42</th>\n",
-       "      <td>1379455722</td>\n",
-       "      <td>700</td>\n",
-       "      <td>88</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                           unix  aggregate  fridge-freezer  washingmachine  \\\n",
-       "time                                                                         \n",
-       "2013-09-17 22:08:11  1379455691        695              88               0   \n",
-       "2013-09-17 22:08:18  1379455698        694              88               0   \n",
-       "2013-09-17 22:08:26  1379455706        694              88               0   \n",
-       "2013-09-17 22:08:34  1379455714        702              88               0   \n",
-       "2013-09-17 22:08:42  1379455722        700              88               0   \n",
-       "\n",
-       "                     dishwasher  television  microwave  toaster  hi-fi  \\\n",
-       "time                                                                     \n",
-       "2013-09-17 22:08:11           0           0          0        0      0   \n",
-       "2013-09-17 22:08:18           0           0          0        0      0   \n",
-       "2013-09-17 22:08:26           0           0          0        0      0   \n",
-       "2013-09-17 22:08:34           0           0          0        0      0   \n",
-       "2013-09-17 22:08:42           0           0          0        0      0   \n",
-       "\n",
-       "                     kettle  ovenextractorfan  \n",
-       "time                                           \n",
-       "2013-09-17 22:08:11       0                 0  \n",
-       "2013-09-17 22:08:18       0                 0  \n",
-       "2013-09-17 22:08:26       0                 0  \n",
-       "2013-09-17 22:08:34       0                 0  \n",
-       "2013-09-17 22:08:42       0                 0  "
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "house2.head()"
    ]
@@ -288,40 +106,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "81dc168e-8f5d-4910-86ab-51c0ef52b31e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading data for appliance KETTLE ...\n",
-      "Appliance 'KETTLE' does not exist in house 1. Hint: Check the availability of the appliance by using 'get_appliance_names' method\n",
-      "Fetching KETTLE data for House 2\n",
-      "Fetching KETTLE data for House 3\n",
-      "Fetching KETTLE data for House 4\n",
-      "Fetching KETTLE data for House 5\n",
-      "Fetching KETTLE data for House 6\n",
-      "Fetching KETTLE data for House 7\n",
-      "Fetching KETTLE data for House 8\n",
-      "Fetching KETTLE data for House 9\n",
-      "Appliance 'KETTLE' does not exist in house 10. Hint: Check the availability of the appliance by using 'get_appliance_names' method\n",
-      "Fetching KETTLE data for House 11\n",
-      "Fetching KETTLE data for House 12\n",
-      "Fetching KETTLE data for House 13\n",
-      "Fetching KETTLE data for House 15\n",
-      "Appliance 'KETTLE' does not exist in house 16. Hint: Check the availability of the appliance by using 'get_appliance_names' method\n",
-      "Fetching KETTLE data for House 17\n",
-      "Appliance 'KETTLE' does not exist in house 18. Hint: Check the availability of the appliance by using 'get_appliance_names' method\n",
-      "Fetching KETTLE data for House 19\n",
-      "Fetching KETTLE data for House 20\n",
-      "Appliance 'KETTLE' does not exist in house 21. Hint: Check the availability of the appliance by using 'get_appliance_names' method\n",
-      "CPU times: total: 4min 55s\n",
-      "Wall time: 3min 10s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time\n",
     "kettle = refit.get_appliance_data(appliance='Kettle')"
@@ -337,23 +125,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "61c7cfdb-db72-47fb-b992-d4ad77af8a05",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading data for appliance KETTLE ...\n",
-      "Appliance 'KETTLE' does not exist in house 1. Hint: Check the availability of the appliance by using 'get_appliance_names' method\n",
-      "Fetching KETTLE data for House 2\n",
-      "Fetching KETTLE data for House 3\n",
-      "CPU times: total: 40.1 s\n",
-      "Wall time: 25.9 s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time\n",
     "kettle = refit.get_appliance_data(appliance=\"Kettle\", houses=[1,2,3])"
@@ -361,124 +136,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "1202999b-bb4d-4760-9618-45373e74f225",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>aggregate</th>\n",
-       "      <th>kettle</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>time</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2013-09-17 22:08:11</th>\n",
-       "      <td>695</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-09-17 22:08:18</th>\n",
-       "      <td>694</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-09-17 22:08:26</th>\n",
-       "      <td>694</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-09-17 22:08:34</th>\n",
-       "      <td>702</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-09-17 22:08:42</th>\n",
-       "      <td>700</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-05-28 08:05:16</th>\n",
-       "      <td>315</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-05-28 08:05:23</th>\n",
-       "      <td>333</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-05-28 08:05:30</th>\n",
-       "      <td>313</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-05-28 08:05:37</th>\n",
-       "      <td>316</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-05-28 08:05:43</th>\n",
-       "      <td>383</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5733526 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                     aggregate  kettle\n",
-       "time                                  \n",
-       "2013-09-17 22:08:11        695       0\n",
-       "2013-09-17 22:08:18        694       0\n",
-       "2013-09-17 22:08:26        694       0\n",
-       "2013-09-17 22:08:34        702       0\n",
-       "2013-09-17 22:08:42        700       0\n",
-       "...                        ...     ...\n",
-       "2015-05-28 08:05:16        315       0\n",
-       "2015-05-28 08:05:23        333       0\n",
-       "2015-05-28 08:05:30        313       0\n",
-       "2015-05-28 08:05:37        316       0\n",
-       "2015-05-28 08:05:43        383       0\n",
-       "\n",
-       "[5733526 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "kettle.data[2]"
    ]
