--- a/01_getting_started.ipynb
+++ b/01_getting_started.ipynb
@@ -2,32 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "04e04564-120b-45d4-9b89-d25f25420603",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'refit_loader.data_loader'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mrefit_loader\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdata_loader\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m REFIT_Loader\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'refit_loader.data_loader'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from refit_loader.data_loader import REFIT_Loader"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "fd768483-abd0-42e5-a488-045e0f505f35",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Followings are the refit_loader configuration of your experiment..\n",
+      "{'DATA_FOLDER': 'data/refit/', 'DATA_TYPE': '.csv', 'README_FILE': 'refit_loader/REFIT_Readme.txt', 'REFIT_HOUSES': [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 15, 16, 17, 18, 19, 20, 21]}\n",
+      "\n",
+      "Loading specified buildings: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 15, 16, 17, 18, 19, 20, 21]\n",
+      "Parsing the readme file specified: refit_loader/REFIT_Readme.txt\n",
+      "CPU times: total: 766 ms\n",
+      "Wall time: 967 ms\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "refit = REFIT_Loader()"
@@ -43,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "dcd62c84-332e-4f00-a86c-430577f680a3",
    "metadata": {},
    "outputs": [
@@ -70,7 +72,7 @@
        " 'overheadfan']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "14676015-31c3-48a5-891c-4fa4af9be7f8",
    "metadata": {},
    "outputs": [
@@ -100,8 +102,8 @@
       "Loading data for house = 2\n",
       "Loading data for house = 3\n",
       "House Number = 14 does not exist in the provided dataset.\n",
-      "CPU times: total: 22.6 s\n",
-      "Wall time: 14.4 s\n"
+      "CPU times: total: 39.1 s\n",
+      "Wall time: 25 s\n"
      ]
     }
    ],
@@ -114,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "79e3d12e-5a64-477f-bdd0-e700879dda64",
    "metadata": {},
    "outputs": [
@@ -139,7 +141,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>unix</th>\n",
        "      <th>aggregate</th>\n",
        "      <th>fridge-freezer</th>\n",
        "      <th>washingmachine</th>\n",
@@ -163,111 +164,105 @@
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
-       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2013-09-17 22:08:11</th>\n",
-       "      <td>1379455691</td>\n",
-       "      <td>695</td>\n",
-       "      <td>88</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>695.0</td>\n",
+       "      <td>88.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2013-09-17 22:08:18</th>\n",
-       "      <td>1379455698</td>\n",
-       "      <td>694</td>\n",
-       "      <td>88</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>694.0</td>\n",
+       "      <td>88.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2013-09-17 22:08:26</th>\n",
-       "      <td>1379455706</td>\n",
-       "      <td>694</td>\n",
-       "      <td>88</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>694.0</td>\n",
+       "      <td>88.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2013-09-17 22:08:34</th>\n",
-       "      <td>1379455714</td>\n",
-       "      <td>702</td>\n",
-       "      <td>88</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>702.0</td>\n",
+       "      <td>88.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2013-09-17 22:08:42</th>\n",
-       "      <td>1379455722</td>\n",
-       "      <td>700</td>\n",
-       "      <td>88</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>700.0</td>\n",
+       "      <td>88.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                           unix  aggregate  fridge-freezer  washingmachine  \\\n",
+       "                     aggregate  fridge-freezer  washingmachine  dishwasher  \\\n",
        "time                                                                         \n",
-       "2013-09-17 22:08:11  1379455691        695              88               0   \n",
-       "2013-09-17 22:08:18  1379455698        694              88               0   \n",
-       "2013-09-17 22:08:26  1379455706        694              88               0   \n",
-       "2013-09-17 22:08:34  1379455714        702              88               0   \n",
-       "2013-09-17 22:08:42  1379455722        700              88               0   \n",
+       "2013-09-17 22:08:11      695.0            88.0             0.0         0.0   \n",
+       "2013-09-17 22:08:18      694.0            88.0             0.0         0.0   \n",
+       "2013-09-17 22:08:26      694.0            88.0             0.0         0.0   \n",
+       "2013-09-17 22:08:34      702.0            88.0             0.0         0.0   \n",
+       "2013-09-17 22:08:42      700.0            88.0             0.0         0.0   \n",
        "\n",
-       "                     dishwasher  televisionsite  microwave  toaster  hi-fi  \\\n",
-       "time                                                                         \n",
-       "2013-09-17 22:08:11           0               0          0        0      0   \n",
-       "2013-09-17 22:08:18           0               0          0        0      0   \n",
-       "2013-09-17 22:08:26           0               0          0        0      0   \n",
-       "2013-09-17 22:08:34           0               0          0        0      0   \n",
-       "2013-09-17 22:08:42           0               0          0        0      0   \n",
+       "                     televisionsite  microwave  toaster  hi-fi  kettle  \\\n",
+       "time                                                                     \n",
+       "2013-09-17 22:08:11             0.0        0.0      0.0    0.0     0.0   \n",
+       "2013-09-17 22:08:18             0.0        0.0      0.0    0.0     0.0   \n",
+       "2013-09-17 22:08:26             0.0        0.0      0.0    0.0     0.0   \n",
+       "2013-09-17 22:08:34             0.0        0.0      0.0    0.0     0.0   \n",
+       "2013-09-17 22:08:42             0.0        0.0      0.0    0.0     0.0   \n",
        "\n",
-       "                     kettle  overheadfan  \n",
-       "time                                      \n",
-       "2013-09-17 22:08:11       0            0  \n",
-       "2013-09-17 22:08:18       0            0  \n",
-       "2013-09-17 22:08:26       0            0  \n",
-       "2013-09-17 22:08:34       0            0  \n",
-       "2013-09-17 22:08:42       0            0  "
+       "                     overheadfan  \n",
+       "time                              \n",
+       "2013-09-17 22:08:11          0.0  \n",
+       "2013-09-17 22:08:18          0.0  \n",
+       "2013-09-17 22:08:26          0.0  \n",
+       "2013-09-17 22:08:34          0.0  \n",
+       "2013-09-17 22:08:42          0.0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "81dc168e-8f5d-4910-86ab-51c0ef52b31e",
    "metadata": {},
    "outputs": [
@@ -295,18 +290,28 @@
      "output_type": "stream",
      "text": [
       "Loading data for appliance KETTLE ...\n",
-      "Appliance 'KETTLE' does not exist in house 1. Hint: Check the availability of the appliance by using 'get_appliance_names' method\n",
+      "Appliance 'KETTLE' does not exist in house 1.\n",
       "Fetching KETTLE data for House 2\n",
-      "Fetching KETTLE data for House 3\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "KeyboardInterrupt\n",
-      "\n"
+      "Fetching KETTLE data for House 3\n",
+      "Fetching KETTLE data for House 4\n",
+      "Fetching KETTLE data for House 5\n",
+      "Fetching KETTLE data for House 6\n",
+      "Fetching KETTLE data for House 7\n",
+      "Fetching KETTLE data for House 8\n",
+      "Fetching KETTLE data for House 9\n",
+      "Appliance 'KETTLE' does not exist in house 10.\n",
+      "Fetching KETTLE data for House 11\n",
+      "Fetching KETTLE data for House 12\n",
+      "Fetching KETTLE data for House 13\n",
+      "Appliance 'KETTLE' does not exist in house 15.\n",
+      "Appliance 'KETTLE' does not exist in house 16.\n",
+      "Fetching KETTLE data for House 17\n",
+      "Appliance 'KETTLE' does not exist in house 18.\n",
+      "Fetching KETTLE data for House 19\n",
+      "Fetching KETTLE data for House 20\n",
+      "Appliance 'KETTLE' does not exist in house 21.\n",
+      "CPU times: total: 4min 21s\n",
+      "Wall time: 2min 46s\n"
      ]
     }
    ],
@@ -325,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "61c7cfdb-db72-47fb-b992-d4ad77af8a05",
    "metadata": {},
    "outputs": [
@@ -334,17 +339,11 @@
      "output_type": "stream",
      "text": [
       "Loading data for appliance KETTLE ...\n",
-      "Appliance 'KETTLE' does not exist in house 1. Hint: Check the availability of the appliance by using 'get_appliance_names' method\n",
-      "Fetching KETTLE data for House 2\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "KeyboardInterrupt\n",
-      "\n"
+      "Appliance 'KETTLE' does not exist in house 1.\n",
+      "Fetching KETTLE data for House 2\n",
+      "Fetching KETTLE data for House 3\n",
+      "CPU times: total: 38.4 s\n",
+      "Wall time: 24.2 s\n"
      ]
     }
    ],
@@ -355,18 +354,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "1202999b-bb4d-4760-9618-45373e74f225",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "KeyboardInterrupt\n",
-      "\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>aggregate</th>\n",
+       "      <th>kettle</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>time</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2013-09-17 22:08:11</th>\n",
+       "      <td>695.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-09-17 22:08:18</th>\n",
+       "      <td>694.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-09-17 22:08:26</th>\n",
+       "      <td>694.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-09-17 22:08:34</th>\n",
+       "      <td>702.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-09-17 22:08:42</th>\n",
+       "      <td>700.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-05-28 08:05:16</th>\n",
+       "      <td>315.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-05-28 08:05:23</th>\n",
+       "      <td>333.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-05-28 08:05:30</th>\n",
+       "      <td>313.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-05-28 08:05:37</th>\n",
+       "      <td>316.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-05-28 08:05:43</th>\n",
+       "      <td>383.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5733526 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     aggregate  kettle\n",
+       "time                                  \n",
+       "2013-09-17 22:08:11      695.0     0.0\n",
+       "2013-09-17 22:08:18      694.0     0.0\n",
+       "2013-09-17 22:08:26      694.0     0.0\n",
+       "2013-09-17 22:08:34      702.0     0.0\n",
+       "2013-09-17 22:08:42      700.0     0.0\n",
+       "...                        ...     ...\n",
+       "2015-05-28 08:05:16      315.0     0.0\n",
+       "2015-05-28 08:05:23      333.0     0.0\n",
+       "2015-05-28 08:05:30      313.0     0.0\n",
+       "2015-05-28 08:05:37      316.0     0.0\n",
+       "2015-05-28 08:05:43      383.0     0.0\n",
+       "\n",
+       "[5733526 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
